# mcpipe

./: AGENTS.md  LICENSE  README.md  pyproject.toml
scripts/: pre-commit  update_coverage_badge.py  update_toc.py
src/mcpipe/: __init__.py  __main__.py  _version.py  authoring.py  bootstrap.py  cache.py  config.py  framework.py  log.py  plugin.py  server.py  transform.py
src/mcpipe/cli/: __init__.py  args.py  main.py
src/mcpipe/plugins/: docker.py  filesystem.py  git.py
src/mcpipe/types/: __init__.py  _hints.py  protocol.py
tests/: conftest.py  test_cache.py  test_framework.py  test_plugin.py  test_server.py  test_smoke.py
